force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/COVID_Status__c.field-meta.xml
<CustomField>
    <fullName>COVID_Status__c</fullName>
    <label>COVID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never Positive</fullName>
            </value>
            <value>
                <fullName>Past Positive</fullName>
            </value>
            <value>
                <fullName>Current Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>