force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/COVID_Vaccination_Administration_Status__c.field-meta.xml
<CustomField>
    <fullName>COVID_Vaccination_Administration_Status__c</fullName>
    <description>COVID Vaccination Administration Status</description>
    <label>COVID Vaccination Administration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>