force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__AbdominalPain__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AbdominalPain__c</fullName>
    <label>Abdominal Pain</label>
    <length>80</length>
    <type>Text</type>
</CustomField>