force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__ChronicRenalDisease__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ChronicRenalDisease__c</fullName>
    <label>Chronic Renal Disease</label>
    <length>80</length>
    <type>Text</type>
</CustomField>