force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__Cough__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Cough__c</fullName>
    <description>Cough (new onset or worsening of chronic cough)</description>
    <label>Cough</label>
    <length>80</length>
    <type>Text</type>
</CustomField>