force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__DiabetesMellitus__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DiabetesMellitus__c</fullName>
    <description>Diabetes Mellitus</description>
    <label>Diabetes Mellitus</label>
    <length>80</length>
    <type>Text</type>
</CustomField>