force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__Diarrhoea__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Diarrhoea__c</fullName>
    <description>Diarrhea (&gt;= 3 loose/looser than normal stools/24 hr period)</description>
    <label>Diarrhea</label>
    <length>80</length>
    <type>Text</type>
</CustomField>