force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__FeverOverThreshold__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__FeverOverThreshold__c</fullName>
    <description>Fever &gt; 100.4F (38C)</description>
    <label>Fever Over Threshold</label>
    <length>80</length>
    <type>Text</type>
</CustomField>