force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__FormerSmoker__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__FormerSmoker__c</fullName>
    <description>Former smoker</description>
    <label>Former Smoker</label>
    <length>80</length>
    <type>Text</type>
</CustomField>