force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__Headache__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Headache__c</fullName>
    <label>Headache</label>
    <length>80</length>
    <type>Text</type>
</CustomField>