force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__HighestRecordedTemperature__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__HighestRecordedTemperature__c</fullName>
    <description>Highest recorded temperature in Fahrenheit.</description>
    <label>Highest Recorded Temperature</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>