force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__HospitalizationStatus__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__HospitalizationStatus__c</fullName>
    <description>Status showing whether the person was admitted to the hospital.</description>
    <label>Hospitalization Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admitted</fullName>
            </value>
            <value>
                <fullName>Not_Admitted</fullName>
                <label>Not Admitted</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>