force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__Immunocompromised__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Immunocompromised__c</fullName>
    <description>Immunocompromised Condition</description>
    <label>Immunocompromised</label>
    <length>80</length>
    <type>Text</type>
</CustomField>