force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__MuscleAches__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MuscleAches__c</fullName>
    <description>Muscle Aches (myalgia)</description>
    <label>Muscle Aches</label>
    <length>80</length>
    <type>Text</type>
</CustomField>