force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__NauseaOrVomiting__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__NauseaOrVomiting__c</fullName>
    <description>Nausea or vomiting</description>
    <label>Nausea or Vomiting</label>
    <length>80</length>
    <type>Text</type>
</CustomField>