force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__Occupation__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Childcare workers</fullName>
                <label>Childcare worker</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Healthcare Worker</fullName>
            </value>
            <value>
                <fullName>Frontline Services Worker</fullName>
            </value>
            <value>
                <fullName>Clinical laboratory technologists and technicians</fullName>
                <isActive>false</isActive>
                <label>Clinical laboratory technologist or technician</label>
            </value>
            <value>
                <fullName>Combined food preparation and serving workers, including fast food</fullName>
                <isActive>false</isActive>
                <label>Combined food preparation or serving worker, including fast food</label>
            </value>
            <value>
                <fullName>Dentists</fullName>
                <isActive>false</isActive>
                <label>Dentist</label>
            </value>
            <value>
                <fullName>Emergency management directors</fullName>
                <isActive>false</isActive>
                <label>Emergency management director</label>
            </value>
            <value>
                <fullName>Emergency medical technicians and paramedics</fullName>
                <isActive>false</isActive>
                <label>Emergency medical technician or paramedic</label>
            </value>
            <value>
                <fullName>Health practitioner support technologists and technicians</fullName>
                <isActive>false</isActive>
                <label>Health practitioner support technologist or technician</label>
            </value>
            <value>
                <fullName>Healthcare support workers, all other, including medical equipment preparers</fullName>
                <isActive>false</isActive>
                <label>Healthcare support worker(including medical equipment preparer)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>