force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__OnsetOfSymptoms__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__OnsetOfSymptoms__c</fullName>
    <description>Date when symptoms started.</description>
    <label>Onset of Symptoms</label>
    <type>Date</type>
</CustomField>