force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__OtherChronicDiseasesNotes__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__OtherChronicDiseasesNotes__c</fullName>
    <description>In case of a other chronic diseases, you can add additional notes for them</description>
    <label>Other Chronic Diseases Notes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>