force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__ParentalConsent__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ParentalConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether consent was provided to interview a minor child.</description>
    <label>Parental consent provided</label>
    <type>Checkbox</type>
</CustomField>