force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__Patient__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clinical Assessment Responses</relationshipLabel>
    <relationshipName>Clinical_Assessment_Responses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>