force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__PrimaryCarePhysician__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__PrimaryCarePhysician__c</fullName>
    <description>Name of the person&apos;s primary care physician.</description>
    <label>Primary Care Physician</label>
    <length>255</length>
    <type>Text</type>
</CustomField>