force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__RunnyNose__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RunnyNose__c</fullName>
    <description>Runny Nose (rhinorrhea)</description>
    <label>Runny Nose</label>
    <length>80</length>
    <type>Text</type>
</CustomField>