force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__ShortnessOfBreath__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ShortnessOfBreath__c</fullName>
    <description>Shortness of Breath (dyspnea)</description>
    <label>Shortness of Breath</label>
    <length>80</length>
    <type>Text</type>
</CustomField>