force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__SoreThroat__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SoreThroat__c</fullName>
    <description>Sore Throat</description>
    <label>Sore Throat</label>
    <length>80</length>
    <type>Text</type>
</CustomField>