force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Response__c/fields/HealthCloudGA__TestingFacilityName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TestingFacilityName__c</fullName>
    <description>Name of the facility where testing was done.</description>
    <label>Testing Facility Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>